feat: CI improvements & fixes.

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -1,12 +1,13 @@
 ---
-- name: Converge
+- name: test all the things
   hosts: all
   become: true
 
   pre_tasks:
-    - name: Update apt cache and install bzip2.
+    - name: update apt cache and install bzip2
       apt: name=bzip2 state=present update_cache=true cache_valid_time=600
       when: ansible_os_family == 'Debian'
+      changed_when: false
 
   roles:
-    - role: ansible-role-restic
+    - role: hadret.restic
