--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
 
 variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.pip"
+  ROLE_NAME: restic
 
 cache:
   paths:
@@ -11,6 +12,9 @@ cache:
     - virtenv/
 
 before_script:
+  - cd ../
+  - mv ansible-role-$ROLE_NAME hadret.$ROLE_NAME
+  - cd hadret.$ROLE_NAME
   - pip install --user virtualenv
   - virtualenv virtenv
   - source virtenv/bin/activate
