--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,27 +15,27 @@
 
 - name: ensure restic installation directory exist
   file:
-    state: 'directory'
-    path: '{{ restic_install_path }}'
+    state: "directory"
+    path: "{{ restic_install_path }}"
 
 - name: download restic binary
   get_url:
-    url: "https://github.com/restic/restic/releases/download/v{{ restic_version }}/restic_{{ restic_version }}_{{ ansible_system | lower }}_{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}.bz2"
-    dest: "/tmp/restic_{{ restic_version }}_{{ ansible_system | lower }}_{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}.bz2"
+    url: "https://github.com/restic/restic/releases/download/v{{ restic_version }}/restic_{{ restic_version }}_{{ ansible_system | lower }}_{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}.bz2"  # noqa 204
+    dest: "/tmp/restic_{{ restic_version }}_{{ ansible_system | lower }}_{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}.bz2"  # noqa 204
   run_once: true
 
 - name: decompress restic binary
-  shell: "bzip2 -dc /tmp/restic_{{ restic_version }}_{{ ansible_system | lower }}_{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}.bz2 > /tmp/restic_{{ restic_version }}_{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}"
+  shell: "bzip2 -dc /tmp/restic_{{ restic_version }}_{{ ansible_system | lower }}_{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}.bz2 > /tmp/restic_{{ restic_version }}_{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}"  # noqa 204
   args:
     creates: "/tmp/restic_{{ restic_version }}_{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}"
 
 - name: copy restic binary
   copy:
     src: "/tmp/restic_{{ restic_version }}_{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}"
-    dest: '{{ restic_install_path }}/restic'
-    mode: '0750'
-    owner: 'root'
-    group: '{{ restic_group }}'
+    dest: "{{ restic_install_path }}/restic"
+    mode: "0750"
+    owner: "root"
+    group: "{{ restic_group }}"
     remote_src: true
   become: true
 
@@ -48,39 +48,39 @@
 
 - name: set proper capabilities for restic binary
   capabilities:
-    path: '{{ restic_install_path }}/restic'
+    path: "{{ restic_install_path }}/restic"
     capability: cap_dac_read_search+ep
     state: present
   become: true
 
 - name: deploy password files
   lineinfile:
-    path: '{{ restic_password_file_path }}/.restic-{{ item.name }}'
-    line: '{{ item.password }}'
-    mode: '0440'
-    owner: 'root'
-    group: '{{ restic_group }}'
+    path: "{{ restic_password_file_path }}/.restic-{{ item.name }}"
+    line: "{{ item.password }}"
+    mode: "0440"
+    owner: "root"
+    group: "{{ restic_group }}"
     create: true
-  with_items: '{{ restic_repos }}'
+  with_items: "{{ restic_repos }}"
   no_log: true
   become: true
 
 - name: deploy wrapper scripts
   template:
-    src: 'restic-wrapper.sh.j2'
-    dest: '{{ restic_install_path }}/restic-{{ item.name }}'
-    mode: '0770'
-    owner: 'root'
-    group: '{{ restic_group }}'
-  with_items: '{{ restic_repos }}'
+    src: "restic-wrapper.sh.j2"
+    dest: "{{ restic_install_path }}/restic-{{ item.name }}"
+    mode: "0770"
+    owner: "root"
+    group: "{{ restic_group }}"
+  with_items: "{{ restic_repos }}"
   no_log: true
   become: true
 
 - name: deploy cron script
   template:
-    src: 'restic.cron.j2'
-    dest: '/etc/cron.d/restic-{{ item.name }}'
-    mode: '0640'
-  with_items: '{{ restic_repos }}'
+    src: "restic.cron.j2"
+    dest: "/etc/cron.d/restic-{{ item.name }}"
+    mode: "0640"
+  with_items: "{{ restic_repos }}"
   no_log: true
   become: true
