--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,6 +19,19 @@
     path: "{{ restic_install_path }}"
     mode: "0755"
 
+# TODO: move this to dedicated Setup-Debian.yml file
+- name: install dependencies on Debian and derivatives
+  apt:
+    name:
+      - "bzip2"
+      - "libcap2-bin"
+    state: present
+    update_cache: true
+    cache_valid_time: 3600
+  when: ansible_os_family == "Debian"
+  become: true
+
+# TODO: provide installation method from official repositories
 - name: download restic binary
   get_url:
     url: "https://github.com/restic/restic/releases/download/v{{ restic_version }}/restic_{{ restic_version }}_{{ ansible_system | lower }}_{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}.bz2"  # noqa 204
@@ -37,13 +50,6 @@
     owner: "root"
     group: "{{ restic_group }}"
     remote_src: true
-  become: true
-
-- name: install libcap on Debian systems
-  package:
-    name: "libcap2-bin"
-    state: present
-  when: ansible_os_family | lower == "debian"
   become: true
 
 - name: set proper capabilities for restic binary
