--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,7 +5,8 @@ restic_password_file_path: '/root'
 restic_discard_cron_stdout: false
 
 # restic_prometheus_exporter: false
-# restic_prometheus_output_path: /var/lib/node_exporter/textfile_collector
+# restic_prometheus_output_path: '/var/lib/node_exporter/textfile_collector'
+# restic_prometheus_time: '0 0 * * *'
 
 restic_repos: []
 # restic_repos:
