--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,6 +2,7 @@
 - name: test all the things
   hosts: all
   become: true
-
+  pre_tasks:
+    - apt: update_cache=yes
   roles:
     - role: ansible-role-restic
