--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -4,5 +4,6 @@
   become: true
   pre_tasks:
     - apt: update_cache=yes
+      when: ansible_os_family == 'Debian'
   roles:
     - role: ansible-role-restic
