--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,4 +6,4 @@
     - apt: update_cache=yes
       when: ansible_os_family == 'Debian'
   roles:
-    - role: ansible-role-restic
+    - role: hadret.restic
